# ml-practice

./: .gitignore  README.md  conda-environment.yaml  pyproject.toml
causal-inference/: 05-OLS.ipynb  06-GroupedAndDummyRegression.ipynb  07-BeyondCounfuonders.ipynb  GoodMetricsNotGoodCausation.ipynb
examples/: Curse of Dimensionality.ipynb  GradientVanishing.ipynb  Learning 1D Manifold.ipynb  Overfit.ipynb  curse_of_dimensionality.ipynb  hello.py  lib.py
exercises/: BatSound.ipynb  CentralLimitTheoreme.ipynb  Vitality.ipynb  fit_distribution.ipynb
hands-on/: 01 - e2e project.ipynb  Chapter 02 - Classification.ipynb  Chapter 02 - Exercise 03.ipynb
