[tool.poetry]
name = "ml-practice"
version = "0.1.0"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "1.0.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"
image = "^1.5.33"
imageio = "^2.35.1"
moviepy = "^1.0.3"
opencv-contrib-python = "^4.10.0.84"
pillow = "^10.4.0"
scenedetect = "^0.6.4"
pyyaml = "^6.0.2"
annoy = "^1.17.3"
kaggle = "^1.6.17"
dask-sql = "^2024.5.0"
scipy = "^1.14.1"
jupyterlab = "^4.2.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
